@@ -406,7 +406,7 @@ namespace bt
 				if (!cur_piece || cur_piece->parentChunk() != c)
 					cur_piece = c->getPiece(0,c->getSize(),false);
 
-				memcpy(cur_piece->data() + bytes_of_cur_chunk,tmp.data() + off,bl);
+				cur_piece->write((const Uint8*)tmp.data() + off,bl,bytes_of_cur_chunk);
 				downloaded += bl;
 			}
 			off += bl;
