@@ -1,5 +1,6 @@
 Changes in 1.1:
 - Use UTF-8 as default codec in bt::Value::toString
+- Make sure that SIGBUS signals caused by failed mmapped IO are dealt with properly (241598)
 
 Changes in 1.0.1:
 - Make sure that KT binds correctly on systems with net.ipv6.bindv6only set to 1 (238688)
